[package]
name = "strawberry"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5", features = ["json"] }
image = "0.24"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
